--- a/unknown_s76pj4.bot_scam_do_not_run.json
+++ b/unknown_s76pj4.bot_scam_do_not_run.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_s76pj4.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "timeout",
 	"script": "unknown_s76pj4.bot_scam_do_not_run",
 	"sector": "HJG_6981",
 	"sec_level": 4,
 	"date_added": 1571527882218,
-	"last_scraped": 1571770000461,
+	"last_scraped": 1571772634447,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571527882218
 		}
 	],
-	"updt": 1571767872472,
-	"edit": 71,
-	"next_scrape": 1571810717619,
+	"updt": 1571770129544,
+	"edit": 72,
+	"next_scrape": 1571864121377,
 	"category": "dice_roller",
-	"last_update": 1571770000461,
+	"last_update": 1571772634447,
 	"output": [
 		{
 			"args": {},
-			"calls": 563573,
+			"calls": 569211,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"rom d",
