--- a/uknown_7w7mc1.moon.json
+++ b/uknown_7w7mc1.moon.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_7w7mc1.moon",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_7w7mc1.moon",
 	"sector": "NGC_8726",
 	"sec_level": 4,
 	"date_added": 1571524197262,
-	"last_scraped": 1571787532010,
+	"last_scraped": 1571790055508,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524197262
 		}
 	],
-	"next_scrape": 1571831507846,
+	"next_scrape": 1571834500364,
 	"category": "plant_sim",
-	"last_update": 1571787532010,
+	"last_update": 1571790055508,
 	"output": [
 		{
 			"args": {},
@@ -66,10 +66,25 @@
 				" | NETW ",
 				"91C\\nSYST"
 			]
+		},
+		{
+			"args": {},
+			"calls": 1634,
+			"base": "c:\"o7t96o\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
+			"fragments": [
+				"_SECT",
+				"OR | ",
+				"| PROG",
+				"E ERRO",
+				"NETW ER",
+				"MFT0X1F_",
+				" | NETW ",
+				"91C\\nSYST"
+			]
 		}
 	],
-	"updt": 1571785130856,
-	"edit": 73,
+	"updt": 1571787615824,
+	"edit": 74,
 	"identified": [
 		{
 			"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
