--- a/uknown_7hh07e.farm.json
+++ b/uknown_7hh07e.farm.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_7hh07e.farm",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_7hh07e.farm",
 	"sector": "VNP_0925",
 	"sec_level": 4,
 	"date_added": 1571804723454,
-	"last_scraped": 1571805637703,
+	"last_scraped": 1571805869113,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571804723454
 		}
 	],
-	"scrape_ct": 4,
-	"next_scrape": 1571805697703,
+	"next_scrape": 1571846365169,
 	"category": "dice_roller",
-	"last_update": 1571805637703,
+	"last_update": 1571805869113,
 	"output": [
 		{
 			"args": {},
-			"calls": 84730,
+			"calls": 110390,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"hange",
@@ -57,8 +56,8 @@
 			]
 		}
 	],
-	"updt": 1571805416795,
-	"edit": 4,
+	"updt": 1571805642549,
+	"edit": 5,
 	"identified": [
 		{
 			"document": "Essence",
