--- a/uknown_xf2dal.chat_limit.json
+++ b/uknown_xf2dal.chat_limit.json
@@ -6,13 +6,85 @@
 	"sector": "VNP_0925",
 	"sec_level": 4,
 	"date_added": 1571811042983,
-	"last_scraped": 1571811052535,
+	"last_scraped": 1571812116767,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571811042983
 		}
 	],
-	"scrape_ct": 20,
-	"next_scrape": 1571811112535
+	"scrape_ct": 1,
+	"next_scrape": 1571812176767,
+	"category": "dice_roller",
+	"last_update": 1571812116767,
+	"output": [
+		{
+			"args": {},
+			"calls": 117058,
+			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
+			"fragments": [
+				"ve me",
+				" need",
+				"y, use",
+				"r Erin",
+				"n R\\n1",
+				"ay, us",
+				"C9 Alr",
+				" print",
+				"Okay, u",
+				"BB Okay",
+				" Alrigh",
+				"lright. ",
+				"ht. Give",
+				"EBC You ",
+				"1EBB Oka",
+				". Give m",
+				" user Er",
+				"all.\\n1EB",
+				"\\n1EC9 Al"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"user ",
+						"BB Ok",
+						" You ",
+						"n R\\n1",
+						"all.\\n",
+						"C9 Alr",
+						"1EBB O",
+						" print",
+						"Okay, u",
+						"ll.\\n1EB",
+						"ht. Give",
+						". Give m",
+						"\\n1EC9 Al"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"user ",
+				"BB Ok",
+				" You ",
+				"n R\\n1",
+				"all.\\n",
+				"C9 Alr",
+				"1EBB O",
+				" print",
+				"Okay, u",
+				"ll.\\n1EB",
+				"ht. Give",
+				". Give m",
+				"\\n1EC9 Al"
+			]
+		}
+	],
+	"updt": 1571811960290,
+	"edit": 2
 }
