--- a/uknown_xf2dal.chat_limit.json
+++ b/uknown_xf2dal.chat_limit.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_xf2dal.chat_limit",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_xf2dal.chat_limit",
 	"sector": "VNP_0925",
 	"sec_level": 4,
 	"date_added": 1571811042983,
-	"last_scraped": 1571812116767,
+	"last_scraped": 1571812297821,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571811042983
 		}
 	],
-	"scrape_ct": 1,
-	"next_scrape": 1571812176767,
+	"next_scrape": 1571852499750,
 	"category": "dice_roller",
-	"last_update": 1571812116767,
+	"last_update": 1571812297821,
 	"output": [
 		{
 			"args": {},
-			"calls": 117058,
+			"calls": 134952,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ve me",
@@ -85,6 +84,6 @@
 			]
 		}
 	],
-	"updt": 1571811960290,
-	"edit": 2
+	"updt": 1571812184812,
+	"edit": 3
 }
