--- a/uknown_xf2dal.chat_limit.json
+++ b/uknown_xf2dal.chat_limit.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_xf2dal.chat_limit",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "uknown_xf2dal.chat_limit",
 	"sector": "VNP_0925",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1571811042983
+		},
+		{
+			"type": "died",
+			"when": 1571813423169
 		}
 	],
 	"next_scrape": 1571852499750,
@@ -84,6 +88,6 @@
 			]
 		}
 	],
-	"updt": 1571812184812,
-	"edit": 3
+	"updt": 1571812635201,
+	"edit": 4
 }
