--- a/uknown_xf2dal.pub_info_o8aw40.json
+++ b/uknown_xf2dal.pub_info_o8aw40.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_xf2dal.pub_info_o8aw40",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_xf2dal.pub_info_o8aw40",
 	"sector": "SPC_8841",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565482044943
+		},
+		{
+			"type": "died",
+			"when": 1571813544508
 		}
 	],
 	"next_scrape": 1571210933439,
@@ -108,6 +112,6 @@
 			]
 		}
 	],
-	"updt": 1571164625527,
-	"edit": 156
+	"updt": 1571168914965,
+	"edit": 157
 }
