--- a/uknown_xf2dal.loc.json
+++ b/uknown_xf2dal.loc.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_xf2dal.loc",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_xf2dal.loc",
 	"sector": "K_2006",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1571527621107
+		},
+		{
+			"type": "died",
+			"when": 1571813465388
 		}
 	],
 	"next_scrape": 1571655380227,
@@ -60,8 +64,8 @@
 			]
 		}
 	],
-	"updt": 1571606761768,
-	"edit": 20,
+	"updt": 1571610822092,
+	"edit": 21,
 	"identified": [
 		{
 			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
