--- a/uknown_yr7sj1.txt.json
+++ b/uknown_yr7sj1.txt.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_yr7sj1.txt",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "timeout",
 	"script": "uknown_yr7sj1.txt",
 	"sector": "VNP_0925",
 	"sec_level": 4,
 	"date_added": 1571813944923,
-	"last_scraped": 1571813976654,
+	"last_scraped": 1571813995087,
 	"script_log": [
 		{
 			"type": "added",
@@ -15,16 +15,13 @@
 	],
 	"retry_args": [
 		{
-			"do": "win"
-		},
-		{
 			"do": "LOSE"
 		}
 	],
 	"scrape_ct": 19,
-	"next_scrape": 1571814036654,
+	"next_scrape": 1571898605352,
 	"category": "risk_factor",
-	"last_update": 1571813976654,
+	"last_update": 1571813995087,
 	"output": [
 		{
 			"args": {},
@@ -49,6 +46,34 @@
 				" fun of ",
 				"e\\n203F :"
 			]
+		},
+		{
+			"args": {
+				"do": "win"
+			},
+			"calls": 121,
+			"base": "YOU WON 2GC\n...if i could afford to pay out.",
+			"fragments": [
+				"l 3 d",
+				"203E Y",
+				"ion.\\n2",
+				"e makin",
+				" :)\\n20",
+				"un of me",
+				"u're mak",
+				"ibution.",
+				"g fun of",
+				"fun of m",
+				"f me\\n20",
+				"03F :)\\n",
+				"03E You'",
+				")\\n2040 ",
+				" of me\\n",
+				" fun of ",
+				"e\\n203F :"
+			]
 		}
-	]
+	],
+	"updt": 1571813986240,
+	"edit": 1
 }
