--- a/uknown_yr7sj1.accts_balance.json
+++ b/uknown_yr7sj1.accts_balance.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_yr7sj1.accts_balance",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_yr7sj1.accts_balance",
 	"sector": "NGC_1069",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1569085645113
+		},
+		{
+			"type": "died",
+			"when": 1571815844351
 		}
 	],
-	"updt": 1570714186975,
-	"edit": 7,
+	"updt": 1570727263349,
+	"edit": 8,
 	"scrape_ct": 16,
 	"next_scrape": 1570768970892,
 	"category": "clicker",
