--- a/uknown_yr7sj1.bot_scam_do_not_run.json
+++ b/uknown_yr7sj1.bot_scam_do_not_run.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_yr7sj1.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "uknown_yr7sj1.bot_scam_do_not_run",
 	"sector": "HJG_5971",
 	"sec_level": 2,
@@ -35,10 +35,14 @@
 				"from": "HJG_5971",
 				"to": "K_4785"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1571815884965
+		}
 	],
-	"updt": 1569114072498,
-	"edit": 13,
+	"updt": 1570663003136,
+	"edit": 14,
 	"scrape_ct": 17,
 	"next_scrape": 1569108383615,
 	"category": "UNKNOWN CATEGORY",
