--- a/uknown_yr7sj1.txt.json
+++ b/uknown_yr7sj1.txt.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_yr7sj1.txt",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "dead",
 	"script": "uknown_yr7sj1.txt",
 	"sector": "VNP_0925",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1571813944923
+		},
+		{
+			"type": "died",
+			"when": 1571815795243
 		}
 	],
 	"retry_args": [
@@ -45,6 +49,30 @@
 				" of me\\n",
 				" fun of ",
 				"e\\n203F :"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"l 3 d",
+						"203E Y",
+						"ion.\\n2",
+						"e makin",
+						" :)\\n20",
+						"un of me",
+						"u're mak",
+						"ibution.",
+						"g fun of",
+						"fun of m",
+						"f me\\n20",
+						"03F :)\\n",
+						"03E You'",
+						")\\n2040 ",
+						" of me\\n",
+						" fun of ",
+						"e\\n203F :"
+					]
+				}
 			]
 		},
 		{
@@ -71,9 +99,57 @@
 				" of me\\n",
 				" fun of ",
 				"e\\n203F :"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"l 3 d",
+						"203E Y",
+						"ion.\\n2",
+						"e makin",
+						" :)\\n20",
+						"un of me",
+						"u're mak",
+						"ibution.",
+						"g fun of",
+						"fun of m",
+						"f me\\n20",
+						"03F :)\\n",
+						"03E You'",
+						")\\n2040 ",
+						" of me\\n",
+						" fun of ",
+						"e\\n203F :"
+					]
+				}
 			]
 		}
 	],
-	"updt": 1571813986240,
-	"edit": 1
+	"updt": 1571814211875,
+	"edit": 2,
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"l 3 d",
+				"203E Y",
+				"ion.\\n2",
+				"e makin",
+				" :)\\n20",
+				"un of me",
+				"u're mak",
+				"ibution.",
+				"g fun of",
+				"fun of m",
+				"f me\\n20",
+				"03F :)\\n",
+				"03E You'",
+				")\\n2040 ",
+				" of me\\n",
+				" fun of ",
+				"e\\n203F :"
+			]
+		}
+	]
 }
