--- a/uknown_tuh6rk.t2_scrape.json
+++ b/uknown_tuh6rk.t2_scrape.json
@@ -1,23 +1,23 @@
 {
 	"_id": "uknown_tuh6rk.t2_scrape",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_tuh6rk.t2_scrape",
 	"sector": "NGC_9087",
 	"sec_level": 4,
 	"date_added": 1571531842311,
-	"last_scraped": 1571814759299,
+	"last_scraped": 1571817022094,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531842311
 		}
 	],
-	"updt": 1571812635201,
-	"edit": 88,
-	"next_scrape": 1571860736720,
+	"updt": 1571814889231,
+	"edit": 89,
+	"next_scrape": 1571860700301,
 	"category": "plant_sim",
-	"last_update": 1571814759299,
+	"last_update": 1571817022094,
 	"output": [
 		{
 			"args": {},
@@ -55,7 +55,7 @@
 		},
 		{
 			"args": {},
-			"calls": 36494,
+			"calls": 37555,
 			"base": "c:\"3dc8rg\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 ,\n                 ",
 			"fragments": [
 				" I wo",
