--- a/unknown_2xy62r.brainfuck.json
+++ b/unknown_2xy62r.brainfuck.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_2xy62r.brainfuck",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_2xy62r.brainfuck",
 	"sector": "NGC_4040",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1565571670801
+		},
+		{
+			"type": "died",
+			"when": 1571820850340
 		}
 	],
 	"scrape_ct": 17,
@@ -182,8 +186,8 @@
 			]
 		}
 	],
-	"updt": 1570601904054,
-	"edit": 12,
+	"updt": 1570670442967,
+	"edit": 13,
 	"identified": [
 		{
 			"document": "Cycle/Don Quixote",
