--- a/unknown_857wbs.db.json
+++ b/unknown_857wbs.db.json
@@ -1,26 +1,25 @@
 {
 	"_id": "unknown_857wbs.db",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_857wbs.db",
 	"sector": "VNP_0925",
 	"sec_level": 4,
 	"date_added": 1571820005258,
-	"last_scraped": 1571820254965,
+	"last_scraped": 1571821098989,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571820005258
 		}
 	],
-	"scrape_ct": 16,
-	"next_scrape": 1571820314965,
+	"next_scrape": 1571864295265,
 	"category": "dice_roller",
-	"last_update": 1571820254965,
+	"last_update": 1571821098989,
 	"output": [
 		{
 			"args": {},
-			"calls": 28894,
+			"calls": 111162,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"FT0X8",
@@ -64,6 +63,6 @@
 			]
 		}
 	],
-	"updt": 1571820081271,
-	"edit": 1
+	"updt": 1571820981331,
+	"edit": 5
 }
