--- a/unknown_2xy62r.ee.json
+++ b/unknown_2xy62r.ee.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_2xy62r.ee",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "unknown_2xy62r.ee",
 	"sector": "VNP_1714",
 	"sec_level": 2,
@@ -11,6 +11,12 @@
 		{
 			"type": "added",
 			"when": 1571818217115
+		},
+		{
+			"type": "died",
+			"when": 1571820850340
 		}
-	]
+	],
+	"updt": 1571818274762,
+	"edit": 1
 }
