--- a/unknown_6spd2u.sentience.json
+++ b/unknown_6spd2u.sentience.json
@@ -1,26 +1,25 @@
 {
 	"_id": "unknown_6spd2u.sentience",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_6spd2u.sentience",
 	"sector": "VNP_0925",
 	"sec_level": 4,
 	"date_added": 1571822114076,
-	"last_scraped": 1571822988677,
+	"last_scraped": 1571823379918,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571822114076
 		}
 	],
-	"scrape_ct": 4,
-	"next_scrape": 1571823048677,
+	"next_scrape": 1571869672776,
 	"category": "coin_flipper",
-	"last_update": 1571822988677,
+	"last_update": 1571823379918,
 	"output": [
 		{
 			"args": {},
-			"calls": 84984,
+			"calls": 124637,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"s too",
@@ -58,6 +57,6 @@
 			]
 		}
 	],
-	"updt": 1571822787817,
-	"edit": 3
+	"updt": 1571823236341,
+	"edit": 5
 }
