--- a/unknown_etjdee.db.json
+++ b/unknown_etjdee.db.json
@@ -6,29 +6,36 @@
 	"sector": "HJG_8589",
 	"sec_level": 4,
 	"date_added": 1571695111813,
-	"last_scraped": 1571835635065,
+	"last_scraped": 1571838026856,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571695111813
 		}
 	],
-	"next_scrape": 1571881063647,
+	"next_scrape": 1571884079172,
 	"category": "dice_roller",
-	"last_update": 1571835635065,
+	"last_update": 1571838026856,
 	"output": [
 		{
 			"args": {},
-			"calls": 571092,
+			"calls": 581494,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
-				"042 6",
+				"ecks i",
 				"cks in",
 				"ve you ",
-				"044 Hav",
+				"e.\\n204",
+				"6 lanes",
+				".\\n2043",
 				"s in a l",
 				"in a lin",
+				"\\n2043 6",
+				"\\n2042 6",
 				"6 decks ",
+				"044 Have",
+				"042 6 de",
+				" in a li",
 				"wn.\\n2042",
 				" lanes.\\n"
 			],
@@ -66,6 +73,6 @@
 			]
 		}
 	],
-	"updt": 1571833385039,
-	"edit": 58
+	"updt": 1571835639647,
+	"edit": 59
 }
