--- a/unknown_rfxdd7.transfer.json
+++ b/unknown_rfxdd7.transfer.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_rfxdd7.transfer",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_rfxdd7.transfer",
 	"sector": "HJG_3717",
 	"sec_level": 4,
 	"date_added": 1571668945332,
-	"last_scraped": 1571838659566,
+	"last_scraped": 1571841103079,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571668945332
 		}
 	],
-	"next_scrape": 1571884384772,
+	"next_scrape": 1571885019204,
 	"category": "plant_sim",
-	"last_update": 1571838659566,
+	"last_update": 1571841103079,
 	"output": [
 		{
 			"args": {},
@@ -67,7 +67,7 @@
 		},
 		{
 			"args": {},
-			"calls": 19845,
+			"calls": 21410,
 			"base": "c:\"x9whs9\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"k you",
@@ -98,6 +98,6 @@
 			]
 		}
 	],
-	"updt": 1571836315174,
-	"edit": 67
+	"updt": 1571838797957,
+	"edit": 68
 }
