--- a/uknown_semxxy.heart.json
+++ b/uknown_semxxy.heart.json
@@ -45,14 +45,23 @@
 			],
 			"hits": [
 				{
-					"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
+					"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
 					"frags": [
+						"T0XF7",
 						"ST ER",
 						"ROR |",
+						"R | N",
 						"_CLST0",
+						"OR | U",
+						"E ERRO",
+						"07\\nSY",
 						" ERROR",
+						"| NETW E",
 						"er imiya",
-						" mhollis"
+						"OR | TIM",
+						" | PROG ",
+						" mhollis",
+						"A848D07\\n"
 					]
 				}
 			]
@@ -87,14 +96,23 @@
 			],
 			"hits": [
 				{
-					"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
+					"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
 					"frags": [
+						"T0XF7",
 						"ST ER",
 						"ROR |",
+						"R | N",
 						"_CLST0",
+						"OR | U",
+						"E ERRO",
+						"07\\nSY",
 						" ERROR",
+						"| NETW E",
 						"er imiya",
-						" mhollis"
+						"OR | TIM",
+						" | PROG ",
+						" mhollis",
+						"A848D07\\n"
 					]
 				}
 			]
@@ -124,31 +142,49 @@
 			],
 			"hits": [
 				{
-					"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
+					"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
 					"frags": [
+						"T0XF7",
 						"ST ER",
 						"ROR |",
+						"R | N",
 						"_CLST0",
+						"OR | U",
+						"E ERRO",
+						"07\\nSY",
 						" ERROR",
+						"| NETW E",
 						"er imiya",
-						" mhollis"
+						"OR | TIM",
+						" | PROG ",
+						" mhollis",
+						"A848D07\\n"
 					]
 				}
 			]
 		}
 	],
-	"updt": 1570691181723,
-	"edit": 11,
+	"updt": 1571391051083,
+	"edit": 12,
 	"identified": [
 		{
-			"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
+			"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
 			"frags": [
+				"T0XF7",
 				"ST ER",
 				"ROR |",
+				"R | N",
 				"_CLST0",
+				"OR | U",
+				"E ERRO",
+				"07\\nSY",
 				" ERROR",
+				"| NETW E",
 				"er imiya",
-				" mhollis"
+				"OR | TIM",
+				" | PROG ",
+				" mhollis",
+				"A848D07\\n"
 			]
 		}
 	],
