--- a/uknown_ypswbu.gbdis.json
+++ b/uknown_ypswbu.gbdis.json
@@ -49,6 +49,9 @@
 				{
 					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
 					"frags": [
+						"TIME ",
+						"R | T",
+						"| TIME",
 						"ROG ER",
 						"R | NE",
 						"G ERRO",
@@ -63,9 +66,11 @@
 				{
 					"document": "NOT FOUND",
 					"frags": [
+						"FT0X1",
 						"E23E_F",
 						"282A91",
 						"T0XE23E_",
+						"FILE0X52",
 						"0X5282A9"
 					]
 				}
@@ -76,6 +81,9 @@
 		{
 			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
 			"frags": [
+				"TIME ",
+				"R | T",
+				"| TIME",
 				"ROG ER",
 				"R | NE",
 				"G ERRO",
@@ -90,13 +98,15 @@
 		{
 			"document": "NOT FOUND",
 			"frags": [
+				"FT0X1",
 				"E23E_F",
 				"282A91",
 				"T0XE23E_",
+				"FILE0X52",
 				"0X5282A9"
 			]
 		}
 	],
-	"updt": 1570792436611,
-	"edit": 235
+	"updt": 1571487950444,
+	"edit": 236
 }
