--- a/unknown_0o6wpi.paypal.json
+++ b/unknown_0o6wpi.paypal.json
@@ -66,11 +66,17 @@
 				{
 					"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
 					"frags": [
-						"uild w",
+						"y bui",
+						"hey b",
+						"s what",
 						"they do",
 						"t's wha",
+						"ial, it",
 						"ey do. ",
-						"erial, i"
+						"able ma",
+						" it's w",
+						"erial, i",
+						" build w"
 					]
 				}
 			]
@@ -104,14 +110,20 @@
 		{
 			"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
 			"frags": [
-				"uild w",
+				"y bui",
+				"hey b",
+				"s what",
 				"they do",
 				"t's wha",
+				"ial, it",
 				"ey do. ",
-				"erial, i"
+				"able ma",
+				" it's w",
+				"erial, i",
+				" build w"
 			]
 		}
 	],
-	"updt": 1570942047888,
-	"edit": 138
+	"updt": 1571357471188,
+	"edit": 139
 }
