--- a/unknown_ub0jb7.bot_lowsec.json
+++ b/unknown_ub0jb7.bot_lowsec.json
@@ -1705,11 +1705,28 @@
 				"'Play' b",
 				" is part",
 				" decisio"
+			],
+			"hits": [
+				{
+					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+					"frags": [
+						"apid r",
+						"their b",
+						"ss. Thi",
+						"erstand",
+						"ame. | ",
+						"orm of a",
+						"eave a p",
+						"'Play' b",
+						" is part",
+						" decisio"
+					]
+				}
 			]
 		}
 	],
-	"updt": 1570601454412,
-	"edit": 9,
+	"updt": 1571224716698,
+	"edit": 10,
 	"pl_output": "YOU COULD WIN 1GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"retry_args": [
 		{
@@ -2533,16 +2550,25 @@
 		{
 			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
 			"frags": [
-				"ecisi",
 				"and p",
 				"al in",
 				"to lea",
 				"s take",
 				"earn t",
 				"as far",
+				"apid r",
+				"their b",
+				"ss. Thi",
 				"r abili",
+				"erstand",
+				"ame. | ",
+				"orm of a",
 				"l in par",
-				" leave a"
+				"eave a p",
+				"'Play' b",
+				" leave a",
+				" is part",
+				" decisio"
 			]
 		}
 	]
