--- a/unknown_yadysv.housekeeping_paypal.json
+++ b/unknown_yadysv.housekeeping_paypal.json
@@ -6,18 +6,18 @@
 	"sector": "NGC_8726",
 	"sec_level": 4,
 	"date_added": 1571524437153,
-	"last_scraped": 1571841032980,
+	"last_scraped": 1571843708078,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524437153
 		}
 	],
-	"updt": 1571838797957,
-	"edit": 101,
-	"next_scrape": 1571881673644,
+	"updt": 1571841055038,
+	"edit": 102,
+	"next_scrape": 1571887817105,
 	"category": "plant_sim",
-	"last_update": 1571841032980,
+	"last_update": 1571843708078,
 	"output": [
 		{
 			"args": {},
@@ -59,11 +59,25 @@
 				"ith max",
 				"achieve",
 				"a senti"
+			],
+			"hits": [
+				{
+					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+					"frags": [
+						"o tak",
+						"n ope",
+						" and s",
+						"lity to",
+						"ith max",
+						"achieve",
+						"a senti"
+					]
+				}
 			]
 		},
 		{
 			"args": {},
-			"calls": 73534,
+			"calls": 75203,
 			"base": "c:\"9ntpaz\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"o tak",
@@ -73,6 +87,20 @@
 				"ith max",
 				"achieve",
 				"a senti"
+			],
+			"hits": [
+				{
+					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+					"frags": [
+						"o tak",
+						"n ope",
+						" and s",
+						"lity to",
+						"ith max",
+						"achieve",
+						"a senti"
+					]
+				}
 			]
 		}
 	],
