--- a/unknown_ywicgz.bot_brain.json
+++ b/unknown_ywicgz.bot_brain.json
@@ -74,12 +74,14 @@
 				{
 					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
 					"frags": [
-						"at th",
 						"utolog",
 						"thinks",
 						"hinks ",
+						"design",
 						" hard ",
+						"ugh to ",
 						"d enoug",
+						"at thin",
 						"in an AI",
 						" an AI t",
 						" Saleem."
@@ -93,13 +95,15 @@
 			"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
 			"frags": [
 				"t's a",
-				"at th",
 				" that",
 				"utolog",
 				"thinks",
 				"hinks ",
+				"design",
 				" hard ",
+				"ugh to ",
 				"d enoug",
+				"at thin",
 				"AI desi",
 				"party pl",
 				"ology. #",
@@ -112,6 +116,6 @@
 			]
 		}
 	],
-	"updt": 1570909349919,
-	"edit": 131
+	"updt": 1571744880787,
+	"edit": 132
 }
