--- a/unknown_nd836z.calm.json
+++ b/unknown_nd836z.calm.json
@@ -100,26 +100,36 @@
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
 						"stack",
-						" card",
+						"o a s",
 						"w a ca",
 						"eck, o",
-						"or\\n209D "
+						"d from",
+						"\\n209C",
+						"a card ",
+						"u may:\\n2",
+						"or\\n209D ",
+						", or\\n209"
 					]
 				}
 			]
 		}
 	],
-	"updt": 1570602128402,
-	"edit": 13,
+	"updt": 1571725140471,
+	"edit": 14,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 			"frags": [
 				"stack",
-				" card",
+				"o a s",
 				"w a ca",
 				"eck, o",
-				"or\\n209D "
+				"d from",
+				"\\n209C",
+				"a card ",
+				"u may:\\n2",
+				"or\\n209D ",
+				", or\\n209"
 			]
 		}
 	]
