--- a/unknown_nd836z.logviewer.json
+++ b/unknown_nd836z.logviewer.json
@@ -21,8 +21,8 @@
 			"when": 1571724821390
 		}
 	],
-	"updt": 1571724691273,
-	"edit": 57,
+	"updt": 1571725140471,
+	"edit": 58,
 	"next_scrape": 1571808672355,
 	"category": "plant_sim",
 	"last_update": 1571721640190,
@@ -55,11 +55,19 @@
 					"frags": [
 						"h you",
 						"s and ",
-						"ned co",
+						"et rea",
+						"eady t",
 						"ady to",
+						"ur assi",
 						"this lu",
+						"s lull ",
+						" your a",
 						"t ready ",
+						"ove - th",
+						"o move -",
 						"lull giv",
+						"his lull",
+						"gned cor",
 						" and get"
 					]
 				}
@@ -99,6 +107,42 @@
 				" get rea",
 				" corps a",
 				" - this "
+			],
+			"hits": [
+				{
+					"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
+					"frags": [
+						"ve - ",
+						"assig",
+						"ull gi",
+						"ssigne",
+						"rps an",
+						"h your",
+						"e - th",
+						"d corp",
+						"ady to",
+						" to mo",
+						"ps and ",
+						"ll give",
+						"l gives",
+						"dy to m",
+						"and get",
+						" with y",
+						" this l",
+						" move -",
+						" lull g",
+						"this lul",
+						"t ready ",
+						"s and ge",
+						"our assi",
+						"igned co",
+						"gned cor",
+						" ready t",
+						" get rea",
+						" corps a",
+						" - this "
+					]
+				}
 			]
 		},
 		{
@@ -129,6 +173,36 @@
 				" to move",
 				" lull gi",
 				" corps a"
+			],
+			"hits": [
+				{
+					"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
+					"frags": [
+						"your ",
+						" with",
+						"h your",
+						"t ready",
+						"ith you",
+						"e - thi",
+						" this l",
+						" move -",
+						" get re",
+						"ur assig",
+						"signed c",
+						"s lull g",
+						"s and ge",
+						"ready to",
+						"our assi",
+						"his lull",
+						"gned cor",
+						"get read",
+						"eady to ",
+						"and get ",
+						" to move",
+						" lull gi",
+						" corps a"
+					]
+				}
 			]
 		}
 	],
@@ -136,14 +210,43 @@
 		{
 			"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
 			"frags": [
-				"h you",
-				"s and ",
-				"ned co",
-				"ady to",
-				"this lu",
+				"ssigne",
+				"rps an",
+				"h your",
+				"d corp",
+				"ps and ",
+				"ll give",
+				"l gives",
+				"ith you",
+				"e - thi",
+				"dy to m",
+				" your a",
+				" with y",
+				" this l",
+				"ur assig",
+				"this lul",
 				"t ready ",
+				"signed c",
+				"s lull g",
+				"s and ge",
+				"ready to",
+				"ove - th",
+				"our assi",
+				"o move -",
 				"lull giv",
-				" and get"
+				"igned co",
+				"his lull",
+				"gned cor",
+				"get read",
+				"eady to ",
+				"and get ",
+				" to move",
+				" ready t",
+				" lull gi",
+				" get rea",
+				" corps a",
+				" and get",
+				" - this "
 			]
 		}
 	],
