--- a/unknown_857wbs.db.json
+++ b/unknown_857wbs.db.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_857wbs.db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_857wbs.db",
 	"sector": "VNP_0925",
 	"sec_level": 4,
 	"date_added": 1571820005258,
-	"last_scraped": 1571856357635,
+	"last_scraped": 1571858792449,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571820005258
 		}
 	],
-	"next_scrape": 1571901982669,
+	"next_scrape": 1571904254285,
 	"category": "dice_roller",
-	"last_update": 1571856357635,
+	"last_update": 1571858792449,
 	"output": [
 		{
 			"args": {},
-			"calls": 246337,
+			"calls": 256714,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"FT0X8",
@@ -63,6 +63,6 @@
 			]
 		}
 	],
-	"updt": 1571853675196,
-	"edit": 19
+	"updt": 1571856382317,
+	"edit": 20
 }
