--- a/uknown_t58dw4.bot_scam_do_not_run.json
+++ b/uknown_t58dw4.bot_scam_do_not_run.json
@@ -1,23 +1,23 @@
 {
 	"_id": "uknown_t58dw4.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_t58dw4.bot_scam_do_not_run",
 	"sector": "SPC_8152",
 	"sec_level": 4,
 	"date_added": 1571531842311,
-	"last_scraped": 1571857016124,
+	"last_scraped": 1571859464346,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531842311
 		}
 	],
-	"updt": 1571854352442,
-	"edit": 110,
-	"next_scrape": 1571903112496,
+	"updt": 1571857058726,
+	"edit": 111,
+	"next_scrape": 1571904646716,
 	"category": "plant_sim",
-	"last_update": 1571857016124,
+	"last_update": 1571859464346,
 	"output": [
 		{
 			"args": {},
@@ -45,7 +45,7 @@
 		},
 		{
 			"args": {},
-			"calls": 54716,
+			"calls": 55491,
 			"base": "c:\"9wm362\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
 			"fragments": [
 				"on, Mal",
