--- a/unknown_gy05s0.report.json
+++ b/unknown_gy05s0.report.json
@@ -1,23 +1,23 @@
 {
 	"_id": "unknown_gy05s0.report",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_gy05s0.report",
 	"sector": "VNP_4635",
 	"sec_level": 4,
 	"date_added": 1571529935529,
-	"last_scraped": 1571866379820,
+	"last_scraped": 1571868832320,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571529935529
 		}
 	],
-	"updt": 1571864048234,
-	"edit": 112,
-	"next_scrape": 1571909622607,
+	"updt": 1571866530591,
+	"edit": 113,
+	"next_scrape": 1571908816187,
 	"category": "plant_sim",
-	"last_update": 1571866379820,
+	"last_update": 1571868832320,
 	"output": [
 		{
 			"args": {},
@@ -47,7 +47,7 @@
 		},
 		{
 			"args": {},
-			"calls": 59928,
+			"calls": 61369,
 			"base": "c:\"w20wh3\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 ,\n                 ",
 			"fragments": [
 				"awaki",
