--- a/uknown_y0kaqz.db.json
+++ b/uknown_y0kaqz.db.json
@@ -1,26 +1,26 @@
 {
 	"_id": "uknown_y0kaqz.db",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_y0kaqz.db",
 	"sector": "HJG_1089",
 	"sec_level": 4,
 	"date_added": 1571873232275,
-	"last_scraped": 1571873503308,
+	"last_scraped": 1571873625609,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571873232275
 		}
 	],
-	"scrape_ct": 10,
-	"next_scrape": 1571873563308,
+	"scrape_ct": 6,
+	"next_scrape": 1571873685609,
 	"category": "clicker",
-	"last_update": 1571873503308,
+	"last_update": 1571873625609,
 	"output": [
 		{
 			"args": {},
-			"calls": 25385,
+			"calls": 30117,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ution",
@@ -50,7 +50,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 16334,
+			"calls": 20404,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ution",
@@ -80,7 +80,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 2946,
+			"calls": 4167,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"ution",
@@ -120,5 +120,7 @@
 				" signed:"
 			]
 		}
-	]
+	],
+	"updt": 1571873519440,
+	"edit": 1
 }
