--- a/unknown_fc9arx.scour.json
+++ b/unknown_fc9arx.scour.json
@@ -1,23 +1,23 @@
 {
 	"_id": "unknown_fc9arx.scour",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_fc9arx.scour",
 	"sector": "K_7086",
 	"sec_level": 4,
 	"date_added": 1571525251223,
-	"last_scraped": 1571892618215,
+	"last_scraped": 1571895013244,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571525251223
 		}
 	],
-	"updt": 1571890210608,
-	"edit": 121,
-	"next_scrape": 1571937192030,
+	"updt": 1571892692262,
+	"edit": 122,
+	"next_scrape": 1571940925699,
 	"category": "plant_sim",
-	"last_update": 1571892618215,
+	"last_update": 1571895013244,
 	"output": [
 		{
 			"args": {},
@@ -53,7 +53,7 @@
 		},
 		{
 			"args": {},
-			"calls": 85422,
+			"calls": 86663,
 			"base": "c:\"v0wc4r\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
 			"fragments": [
 				"rly i",
