--- a/unknown_6spd2u.sentience.json
+++ b/unknown_6spd2u.sentience.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_6spd2u.sentience",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_6spd2u.sentience",
 	"sector": "VNP_0925",
 	"sec_level": 4,
 	"date_added": 1571822114076,
-	"last_scraped": 1571899050749,
+	"last_scraped": 1571901242305,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571822114076
 		}
 	],
-	"next_scrape": 1571938997642,
+	"next_scrape": 1571942332940,
 	"category": "coin_flipper",
-	"last_update": 1571899050749,
+	"last_update": 1571901242305,
 	"output": [
 		{
 			"args": {},
-			"calls": 375338,
+			"calls": 394098,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"s too",
@@ -57,6 +57,6 @@
 			]
 		}
 	],
-	"updt": 1571896748072,
-	"edit": 37
+	"updt": 1571899227682,
+	"edit": 38
 }
