--- a/uknown_zqn3ap.feed.json
+++ b/uknown_zqn3ap.feed.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_zqn3ap.feed",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_zqn3ap.feed",
 	"sector": "HJG_1089",
 	"sec_level": 4,
 	"date_added": 1571906537494,
-	"last_scraped": 1571906627441,
+	"last_scraped": 1571907521697,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571906537494
 		}
 	],
-	"scrape_ct": 18,
-	"next_scrape": 1571906687441,
+	"next_scrape": 1571949434429,
 	"category": "coin_flipper",
-	"last_update": 1571906627441,
+	"last_update": 1571907521697,
 	"output": [
 		{
 			"args": {},
-			"calls": 20751,
+			"calls": 103649,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"2154 ",
@@ -54,5 +53,7 @@
 				"stack\\n21"
 			]
 		}
-	]
+	],
+	"updt": 1571907115012,
+	"edit": 2
 }
