--- a/unknown_etjdee.db.json
+++ b/unknown_etjdee.db.json
@@ -6,36 +6,41 @@
 	"sector": "HJG_8589",
 	"sec_level": 4,
 	"date_added": 1571695111813,
-	"last_scraped": 1571908465350,
+	"last_scraped": 1571910646317,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571695111813
 		}
 	],
-	"next_scrape": 1571951645457,
+	"next_scrape": 1571951283035,
 	"category": "dice_roller",
-	"last_update": 1571908465350,
+	"last_update": 1571910646317,
 	"output": [
 		{
 			"args": {},
-			"calls": 828000,
+			"calls": 845104,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
+				"you ar",
 				"ecks i",
 				"cks in",
-				"ve you ",
 				"e.\\n204",
 				"6 lanes",
+				"043 6 l",
 				".\\n2043",
 				"s in a l",
+				"nes.\\n20",
 				"in a lin",
+				"ave you ",
 				"\\n2043 6",
 				"\\n2042 6",
 				"6 decks ",
+				"42 6 dec",
 				"044 Have",
 				"042 6 de",
 				" in a li",
+				" Have yo",
 				"wn.\\n2042",
 				" lanes.\\n"
 			],
@@ -73,6 +78,6 @@
 			]
 		}
 	],
-	"updt": 1571906214614,
-	"edit": 89
+	"updt": 1571908691576,
+	"edit": 90
 }
