--- a/unknown_b6d3vh.tryhard.json
+++ b/unknown_b6d3vh.tryhard.json
@@ -1,26 +1,25 @@
 {
 	"_id": "unknown_b6d3vh.tryhard",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_b6d3vh.tryhard",
 	"sector": "HJG_1089",
 	"sec_level": 4,
 	"date_added": 1571923909892,
-	"last_scraped": 1571924884333,
+	"last_scraped": 1571925034564,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571923909892
 		}
 	],
-	"scrape_ct": 1,
-	"next_scrape": 1571924944333,
+	"next_scrape": 1571970091699,
 	"category": "coin_flipper",
-	"last_update": 1571924884333,
+	"last_update": 1571925034564,
 	"output": [
 		{
 			"args": {},
-			"calls": 115298,
+			"calls": 130541,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"of 3.",
@@ -58,6 +57,6 @@
 			]
 		}
 	],
-	"updt": 1571924474248,
-	"edit": 2
+	"updt": 1571924924632,
+	"edit": 3
 }
