--- a/anon_20ckb9.config.json
+++ b/anon_20ckb9.config.json
@@ -1,28 +1,27 @@
 {
 	"_id": "anon_20ckb9.config",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "anon_20ckb9.config",
 	"sector": "HJG_5571",
 	"sec_level": 4,
 	"date_added": 1571929445969,
-	"last_scraped": 1571933684961,
+	"last_scraped": 1571934176072,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571929445969
 		}
 	],
-	"updt": 1571933492681,
-	"edit": 3,
-	"scrape_ct": 9,
-	"next_scrape": 1571933744961,
+	"updt": 1571934166565,
+	"edit": 6,
+	"next_scrape": 1571977015459,
 	"category": "plant_sim",
-	"last_update": 1571933684961,
+	"last_update": 1571934176072,
 	"output": [
 		{
 			"args": {},
-			"calls": 7732,
+			"calls": 12876,
 			"base": "c:\"fzecbv\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"n a s",
