--- a/unknown_etjdee.db.json
+++ b/unknown_etjdee.db.json
@@ -6,32 +6,33 @@
 	"sector": "HJG_8589",
 	"sec_level": 4,
 	"date_added": 1571695111813,
-	"last_scraped": 1571924411891,
+	"last_scraped": 1571934769092,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571695111813
 		}
 	],
-	"next_scrape": 1571964262603,
+	"next_scrape": 1571978651790,
 	"category": "dice_roller",
-	"last_update": 1571924411891,
+	"last_update": 1571934769092,
 	"output": [
 		{
 			"args": {},
-			"calls": 890913,
+			"calls": 897482,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
+				"line.",
 				"you ar",
-				"ecks i",
-				"cks in",
 				"e.\\n204",
+				"decks i",
 				"6 lanes",
 				"043 6 l",
 				".\\n2043",
 				"s in a l",
 				"nes.\\n20",
 				"in a lin",
+				"cks in a",
 				"ave you ",
 				"\\n2043 6",
 				"\\n2042 6",
@@ -42,6 +43,7 @@
 				" in a li",
 				" Have yo",
 				"wn.\\n2042",
+				"n.\\n2042 ",
 				" lanes.\\n"
 			],
 			"hits": [
@@ -78,6 +80,6 @@
 			]
 		}
 	],
-	"updt": 1571921991360,
-	"edit": 96
+	"updt": 1571924474248,
+	"edit": 97
 }
