--- a/uknown_81uxoj.db.json
+++ b/uknown_81uxoj.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_81uxoj.db",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "dead",
 	"script": "uknown_81uxoj.db",
 	"sector": "HJG_5571",
 	"sec_level": 4,
@@ -11,6 +11,12 @@
 		{
 			"type": "added",
 			"when": 1571926279706
+		},
+		{
+			"type": "died",
+			"when": 1571928124211
 		}
-	]
+	],
+	"updt": 1571926281005,
+	"edit": 1
 }
