--- a/uknown_81uxoj.chat.json
+++ b/uknown_81uxoj.chat.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_81uxoj.chat",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_81uxoj.chat",
 	"sector": "K_2748",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1564168295048
+		},
+		{
+			"type": "died",
+			"when": 1571928474381
 		}
 	],
 	"scrape_ct": 13,
@@ -115,8 +119,8 @@
 			]
 		}
 	],
-	"updt": 1568732718035,
-	"edit": 20,
+	"updt": 1570602128402,
+	"edit": 21,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
