--- a/anon_20ckb9.config.json
+++ b/anon_20ckb9.config.json
@@ -1,62 +1,16 @@
 {
 	"_id": "anon_20ckb9.config",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "new",
 	"script": "anon_20ckb9.config",
 	"sector": "HJG_5571",
 	"sec_level": 4,
 	"date_added": 1571929445969,
-	"last_scraped": 1571936355092,
+	"last_scraped": 0,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571929445969
-		}
-	],
-	"updt": 1571934617203,
-	"edit": 7,
-	"next_scrape": 1571978961603,
-	"category": "plant_sim",
-	"last_update": 1571936355092,
-	"output": [
-		{
-			"args": {},
-			"calls": 13595,
-			"base": "c:\"fzecbv\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
-			"fragments": [
-				"n a s",
-				" the n",
-				"y\\n2155 ",
-				"next ^2.",
-				"it is th",
-				"stack\\n21"
-			],
-			"hits": [
-				{
-					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
-					"frags": [
-						"n a s",
-						" the n",
-						"y\\n2155 ",
-						"next ^2.",
-						"it is th",
-						"stack\\n21"
-					]
-				}
-			]
-		}
-	],
-	"identified": [
-		{
-			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
-			"frags": [
-				"n a s",
-				" the n",
-				"y\\n2155 ",
-				"next ^2.",
-				"it is th",
-				"stack\\n21"
-			]
 		}
 	]
 }
