--- a/anon_20ckb9.config.json
+++ b/anon_20ckb9.config.json
@@ -1,16 +1,62 @@
 {
 	"_id": "anon_20ckb9.config",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "npc",
 	"script": "anon_20ckb9.config",
 	"sector": "HJG_5571",
 	"sec_level": 4,
 	"date_added": 1571929445969,
-	"last_scraped": 0,
+	"last_scraped": 1571938555898,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571929445969
+		}
+	],
+	"updt": 1571936424132,
+	"edit": 8,
+	"next_scrape": 1571984860180,
+	"category": "plant_sim",
+	"last_update": 1571938555898,
+	"output": [
+		{
+			"args": {},
+			"calls": 14708,
+			"base": "c:\"fzecbv\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				"n a s",
+				" the n",
+				"y\\n2155 ",
+				"next ^2.",
+				"it is th",
+				"stack\\n21"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"n a s",
+						" the n",
+						"y\\n2155 ",
+						"next ^2.",
+						"it is th",
+						"stack\\n21"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"n a s",
+				" the n",
+				"y\\n2155 ",
+				"next ^2.",
+				"it is th",
+				"stack\\n21"
+			]
 		}
 	]
 }
