--- a/unknown_yxz1xb.deposit.json
+++ b/unknown_yxz1xb.deposit.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_yxz1xb.deposit",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "dead",
 	"script": "unknown_yxz1xb.deposit",
 	"sector": "K_2954",
 	"sec_level": 2,
@@ -19,10 +19,14 @@
 				"from": "K_2954",
 				"to": "K_9897"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1571932007477
+		}
 	],
 	"pl_output": "{\"ok\":false,\"msg\":\"You must provide argument: amount.\"}",
 	"next_scrape": 1572009891337,
-	"updt": 1571922891058,
-	"edit": 2841
+	"updt": 1571925603161,
+	"edit": 2842
 }
