--- a/unknown_yxz1xb.force_quit.json
+++ b/unknown_yxz1xb.force_quit.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_yxz1xb.force_quit",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_yxz1xb.force_quit",
 	"sector": "K_7243",
 	"sec_level": 1,
@@ -19,12 +19,16 @@
 				"from": "K_7243",
 				"to": "K_1215"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1571932200708
+		}
 	],
 	"pl_output": "\n\n       `B----` `DFORCE QUIT BOX` `B----` \n\n            `bEnter` `Npassword`\n\n",
 	"next_scrape": 1570852421342,
-	"updt": 1570812507125,
-	"edit": 287,
+	"updt": 1570812733134,
+	"edit": 288,
 	"category": "UNKNOWN CATEGORY",
 	"last_update": 1570812534552,
 	"output": [
