--- a/unknown_yxz1xb.respects.json
+++ b/unknown_yxz1xb.respects.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_yxz1xb.respects",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_yxz1xb.respects",
 	"sector": "K_0199",
 	"sec_level": 4,
@@ -23,10 +23,14 @@
 				"from": "K_0199",
 				"to": "HJG_4491"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1571932169486
+		}
 	],
-	"updt": 1570603935181,
-	"edit": 11,
+	"updt": 1570673374466,
+	"edit": 12,
 	"next_scrape": 1570756957513,
 	"category": "UNKNOWN CATEGORY",
 	"last_update": 1570673216468,
