--- a/unknown_yxz1xb.corps.json
+++ b/unknown_yxz1xb.corps.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_yxz1xb.corps",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "dead",
 	"script": "unknown_yxz1xb.corps",
 	"sector": "K_0199",
 	"sec_level": 4,
@@ -23,10 +23,14 @@
 				"from": "K_0199",
 				"to": "HJG_4491"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1571932169486
+		}
 	],
-	"updt": 1571921538990,
-	"edit": 1653,
+	"updt": 1571923796175,
+	"edit": 1654,
 	"pl_output": "Cannot read property 'read' of undefined",
 	"next_scrape": 1572003906038
 }
