--- a/uknown_1ryirp.la.json
+++ b/uknown_1ryirp.la.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_1ryirp.la",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "uknown_1ryirp.la",
 	"sector": "VNP_1714",
 	"sec_level": 2,
@@ -11,6 +11,12 @@
 		{
 			"type": "added",
 			"when": 1571914554938
+		},
+		{
+			"type": "died",
+			"when": 1571941583343
 		}
-	]
+	],
+	"updt": 1571914774765,
+	"edit": 1
 }
