--- a/uknown_1ryirp.stitute.json
+++ b/uknown_1ryirp.stitute.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_1ryirp.stitute",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "dead",
 	"script": "uknown_1ryirp.stitute",
 	"sector": "NGC_1069",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1569085645113
+		},
+		{
+			"type": "died",
+			"when": 1571941551872
 		}
 	],
-	"updt": 1570602581263,
-	"edit": 4,
+	"updt": 1570678332413,
+	"edit": 5,
 	"scrape_ct": 18,
 	"next_scrape": 1570762378141,
 	"category": "risk_factor",
@@ -31,6 +35,19 @@
 				"played\\n",
 				"as 2.\\n2",
 				"\\n2158 f"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"s >. B",
+						"158 fa",
+						"s 2.\\n21",
+						"played\\n",
+						"as 2.\\n2",
+						"\\n2158 f"
+					]
+				}
 			]
 		},
 		{
@@ -46,6 +63,19 @@
 				"played\\n",
 				"as 2.\\n2",
 				"\\n2158 f"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"s >. B",
+						"158 fa",
+						"s 2.\\n21",
+						"played\\n",
+						"as 2.\\n2",
+						"\\n2158 f"
+					]
+				}
 			]
 		}
 	],
@@ -53,6 +83,19 @@
 	"retry_args": [
 		{
 			"do": "LOSE"
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"s >. B",
+				"158 fa",
+				"s 2.\\n21",
+				"played\\n",
+				"as 2.\\n2",
+				"\\n2158 f"
+			]
 		}
 	]
 }
