--- a/uknown_7hh07e.farm.json
+++ b/uknown_7hh07e.farm.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_7hh07e.farm",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_7hh07e.farm",
 	"sector": "VNP_0925",
 	"sec_level": 4,
 	"date_added": 1571804723454,
-	"last_scraped": 1571949149888,
+	"last_scraped": 1571951455295,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571804723454
 		}
 	],
-	"next_scrape": 1571992320147,
+	"next_scrape": 1571994999418,
 	"category": "dice_roller",
-	"last_update": 1571949149888,
+	"last_update": 1571951455295,
 	"output": [
 		{
 			"args": {},
-			"calls": 561994,
+			"calls": 571636,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"hange",
@@ -56,8 +56,8 @@
 			]
 		}
 	],
-	"updt": 1571946799068,
-	"edit": 62,
+	"updt": 1571949281948,
+	"edit": 63,
 	"identified": [
 		{
 			"document": "Essence",
