--- a/unknown_etjdee.db.json
+++ b/unknown_etjdee.db.json
@@ -6,38 +6,41 @@
 	"sector": "HJG_8589",
 	"sec_level": 4,
 	"date_added": 1571695111813,
-	"last_scraped": 1571958347819,
+	"last_scraped": 1571960438882,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571695111813
 		}
 	],
-	"next_scrape": 1572000410585,
+	"next_scrape": 1572001852084,
 	"category": "dice_roller",
-	"last_update": 1571958347819,
+	"last_update": 1571960438882,
 	"output": [
 		{
 			"args": {},
-			"calls": 970722,
+			"calls": 978177,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
+				"u arr",
 				"line.",
 				"you ar",
 				"e.\\n204",
-				"decks i",
+				"e you a",
 				"6 lanes",
-				"043 6 l",
 				".\\n2043",
+				" 6 deck",
 				"s in a l",
 				"nes.\\n20",
 				"in a lin",
+				"decks in",
 				"cks in a",
 				"ave you ",
 				"\\n2043 6",
 				"\\n2042 6",
 				"6 decks ",
 				"42 6 dec",
+				"2043 6 l",
 				"044 Have",
 				"042 6 de",
 				" in a li",
@@ -80,6 +83,6 @@
 			]
 		}
 	],
-	"updt": 1571956266084,
-	"edit": 107
+	"updt": 1571958523370,
+	"edit": 108
 }
