--- a/unknown_etjdee.db.json
+++ b/unknown_etjdee.db.json
@@ -6,20 +6,20 @@
 	"sector": "HJG_8589",
 	"sec_level": 4,
 	"date_added": 1571695111813,
-	"last_scraped": 1571966688591,
+	"last_scraped": 1571968860197,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571695111813
 		}
 	],
-	"next_scrape": 1572010189474,
+	"next_scrape": 1572015590188,
 	"category": "dice_roller",
-	"last_update": 1571966688591,
+	"last_update": 1571968860197,
 	"output": [
 		{
 			"args": {},
-			"calls": 996825,
+			"calls": 1004321,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"u arr",
@@ -83,6 +83,6 @@
 			]
 		}
 	],
-	"updt": 1571964836218,
-	"edit": 111
+	"updt": 1571966864463,
+	"edit": 112
 }
