--- a/unknown_etjdee.db.json
+++ b/unknown_etjdee.db.json
@@ -6,33 +6,30 @@
 	"sector": "HJG_8589",
 	"sec_level": 4,
 	"date_added": 1571695111813,
-	"last_scraped": 1571975179292,
+	"last_scraped": 1571977313066,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571695111813
 		}
 	],
-	"next_scrape": 1572017762242,
+	"next_scrape": 1572023960386,
 	"category": "dice_roller",
-	"last_update": 1571975179292,
+	"last_update": 1571977313066,
 	"output": [
 		{
 			"args": {},
-			"calls": 1033598,
+			"calls": 1036606,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"u arr",
 				"line.",
-				"you ar",
-				"e.\\n204",
-				"e you a",
+				" 6 la",
 				"6 lanes",
-				".\\n2043",
 				" 6 deck",
 				"s in a l",
-				"nes.\\n20",
 				"in a lin",
+				"e you ar",
 				"decks in",
 				"cks in a",
 				"ave you ",
@@ -41,12 +38,16 @@
 				"6 decks ",
 				"42 6 dec",
 				"2043 6 l",
+				"2042 6 d",
 				"044 Have",
 				"042 6 de",
 				" in a li",
 				" Have yo",
 				"wn.\\n2042",
+				"nes.\\n204",
 				"n.\\n2042 ",
+				"ine.\\n204",
+				"e.\\n2043 ",
 				" lanes.\\n"
 			],
 			"hits": [
@@ -83,6 +84,6 @@
 			]
 		}
 	],
-	"updt": 1571973180079,
-	"edit": 115
+	"updt": 1571975431771,
+	"edit": 116
 }
