--- a/uknown_phkbek.fuckthisshitimout.json
+++ b/uknown_phkbek.fuckthisshitimout.json
@@ -6,21 +6,21 @@
 	"sector": "HJG_5571",
 	"sec_level": 4,
 	"date_added": 1571978708982,
-	"last_scraped": 1571978807027,
+	"last_scraped": 1571979442037,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571978708982
 		}
 	],
-	"scrape_ct": 19,
-	"next_scrape": 1571978867027,
+	"scrape_ct": 6,
+	"next_scrape": 1571979502037,
 	"category": "plant_sim",
-	"last_update": 1571978807027,
+	"last_update": 1571979442037,
 	"output": [
 		{
 			"args": {},
-			"calls": 1585,
+			"calls": 9576,
 			"base": "c:\"3f0rpd\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"comba",
@@ -66,5 +66,7 @@
 				"der BREA"
 			]
 		}
-	]
+	],
+	"updt": 1571979263068,
+	"edit": 3
 }
