--- a/uknown_phkbek.fuckthisshitimout.json
+++ b/uknown_phkbek.fuckthisshitimout.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_phkbek.fuckthisshitimout",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_phkbek.fuckthisshitimout",
 	"sector": "HJG_5571",
 	"sec_level": 4,
 	"date_added": 1571978708982,
-	"last_scraped": 1571979442037,
+	"last_scraped": 1571979902753,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571978708982
 		}
 	],
-	"scrape_ct": 6,
-	"next_scrape": 1571979502037,
+	"next_scrape": 1572019839397,
 	"category": "plant_sim",
-	"last_update": 1571979442037,
+	"last_update": 1571979902753,
 	"output": [
 		{
 			"args": {},
-			"calls": 9576,
+			"calls": 14276,
 			"base": "c:\"3f0rpd\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"comba",
@@ -67,6 +66,6 @@
 			]
 		}
 	],
-	"updt": 1571979263068,
-	"edit": 3
+	"updt": 1571979715054,
+	"edit": 5
 }
